--- a/index-ja.css
+++ b/index-ja.css
@@ -1,21 +1,25 @@
-.page-header{
+.page-header {
     text-align: center;
     position: fixed;
     top: 0px;
     left: 0px;
     height: 100%;
-    width:200px;
+    width: 200px;
+    border-right: 3px solid orange;
 }
-.SchoolMark__logo{
+
+.SchoolMark__logo {
     margin: 10px 0px;
 }
-.SchoolMark__logo img{
+
+.SchoolMark__logo img {
     width: 180px;
     height: auto;
 }
-.SchoolMark-name{
+
+.SchoolMark-name {
     text-align: left;
-    margin: 0px 0px 25px 55px ;
+    margin: 0px 0px 25px 55px;
     color: orange;
     font-family: "Tekton Pro Cond";
 }
@@ -30,13 +34,25 @@
     text-shadow: 1px 1px 1px #000;
     border-radius: 10px;
     background-color: orange;
-    background-image: linear-gradient(to top left,
-                                      rgba(0, 0, 0, .2),
-                                      rgba(0, 0, 0, .2) 30%,
-                                      rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
-                inset -2px -2px 3px rgba(0, 0, 0, .6);
+    background-image: linear-gradient(to top left, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2) 30%, rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6), inset -2px -2px 3px rgba(0, 0, 0, .6);
 }
-.page-header__lang{
+
+.page-header__lang {
     margin: 10px 0px;
 }
+
+.page-header__menu {
+    width: 120px;
+    margin: 10px 30px;
+}
+
+.menu {
+    font-size: 20px;
+    line-height: 60px;
+    text-decoration: underline;
+    text-align-last: justify;
+    border: none;
+    -moz-text-align-last: justify;
+}
+.menu:hover {color:red;} /*カーソルが乗っているリンクの色*/
