ヘッダー完成

--- a/header.css
+++ b/header.css
@@ -1,4 +1,5 @@
 .page-header {
+    background-color: rgb(255, 246, 235);
     text-align: center;
     position: fixed;
     top: 0px;
@@ -28,14 +29,13 @@
     border: 0;
     line-height: 2.5;
     padding: 0 20px;
-    font-size: 1rem;
+    font-size: 0.95rem;
     text-align: center;
     color: #fff;
     text-shadow: 1px 1px 1px #000;
     border-radius: 10px;
-    background-color: orange;
-    background-image: linear-gradient(to top left, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2) 30%, rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(168, 158, 158, 0.6), inset -2px -2px 3px rgba(0, 0, 0, .6);
+    border: 2px solid orange;
+    background-color: rgb(255, 198, 92);
 }
 
 .page-header__lang {
@@ -49,14 +49,14 @@
 }
 
 .menu {
-    width: 120;
-    margin: 20px 20px;
+    border-radius: 8px;
+    margin: 20px 0px;
     font-size: 20px;
     line-height: 37px;
     text-decoration: underline;
     text-align-last: justify;
 }
-.menu:hover {color:red;} /*カーソルが乗っているリンクの色*/
+.menu a:hover {color:red;} /*カーソルが乗っているリンクの色*/
 .menu a{
-    margin: 0px 20px;
+    margin: 0px 25px;
 }
