--- a/header.css
+++ b/header.css
@@ -5,10 +5,16 @@
     top: 0px;
     left: 0px;
     height: 100%;
-    width: 200px;
+    width: 230px;
     border-right: 3px solid orange;
+    overflow: auto;
+    white-space: nowrap;
+    scrollbar-width: thin;
 }
-
+.page-header::-webkit-scrollbar {
+    width: 10px;
+  }
+  
 .SchoolMark__logo {
     margin: 10px 0px;
 }
