--- a/header.css
+++ b/header.css
@@ -5,12 +5,12 @@
     top: 0px;
     left: 0px;
     height: 100%;
-    width: 200px;
+    width: 250px;
     border-right: 3px solid orange;
 }
 
 .SchoolMark__logo {
-    margin: 10px 0px;
+    /*margin: 10px 0px;*/
 }
 
 .SchoolMark__logo img {
@@ -20,7 +20,7 @@
 
 .SchoolMark-name {
     text-align: left;
-    margin: 0px 0px 25px 55px;
+    /*margin: 0px 0px 25px 55px;*/
     color: orange;
     font-family: "Tekton Pro Cond";
 }
@@ -28,7 +28,7 @@
 .page-header__lang button {
     border: 0;
     line-height: 2.5;
-    padding: 0 20px;
+    padding: 0 15px;
     font-size: 0.95rem;
     text-align: center;
     color: #fff;
@@ -39,18 +39,18 @@
 }
 
 .page-header__lang {
-    margin: 10px 0px;
+    /*margin: 10px 0px;*/
 }
 
 .page-header__menu {
     width: 160px;
-    margin: 0px 20px;
+    margin: auto;
     border-radius: 10px;
 }
 
 .menu {
     border-radius: 8px;
-    margin: 20px 0px;
+    /*margin: 20px 0px;*/
     font-size: 20px;
     line-height: 37px;
     text-decoration: underline;
@@ -58,5 +58,5 @@
 }
 .menu a:hover {color:red;} /*カーソルが乗っているリンクの色*/
 .menu a{
-    margin: 0px 25px;
+    /*margin: 0px 25px;*/
 }
