--- a/header.css
+++ b/header.css
@@ -55,12 +55,15 @@
 
 .menu {
     /*ボタンの幅*/
-    margin: 30px 20px;
+    margin: 30px 0px;
     border-radius: 8px;
     font-size: 20px;
     line-height: 37px;
     text-decoration: underline;
     text-align-last: justify;
+}
+.menu a{
+    margin: 0px 20px;
 }
 
 .menu a:hover {
