--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,5 @@
 .page-header {
+    word-break: break-all;
     background-color: rgb(255, 246, 235);
     text-align: center;
     position: fixed;
@@ -8,7 +9,6 @@
     width: 200px;
     border-right: 3px solid orange;
     overflow: auto;
-    white-space: nowrap;
     scrollbar-width: thin;
 }
 
@@ -33,7 +33,6 @@
     text-shadow: 1px 1px 1px #000;
     border-radius: 10px;
     border: 2px solid orange;
-    /*background-color: rgb(255, 198, 92);*/
     background-size: cover;
     background-position: center;
 }
@@ -63,7 +62,8 @@
     text-align-last: justify;
 }
 .menu a{
-    margin: 0px 20px;
+    text-align: center;
+    padding: 0px 20px;
 }
 
 .menu a:hover {
