--- a/css/style-ja.css
+++ b/css/style-ja.css
@@ -1,7 +1,7 @@
 html,
 body{
     color: gray;
-    font-family: "Hiragino Sans W3";
+    font-family: "游ゴシック";
 }
 main{
     margin: 0 0 0 210px ;
