--- a/css/intro.css
+++ b/css/intro.css
@@ -20,7 +20,6 @@
 }
 
 .history{
-  letter-spacing: 3px;
   background:rgb(255, 246, 235);;
   text-align:center;
   margin-left: -10;
@@ -30,7 +29,6 @@
 }
 
 .overview{
-  letter-spacing: 3px;
   background:#ffffff;
   text-align:center;
   margin-left: -10;
@@ -39,7 +37,6 @@
 }
 
 .upbringing{
-  letter-spacing: 3px;
   background: rgb(255, 246, 235);
   text-align:center;
   margin-left: -10;
@@ -48,7 +45,6 @@
 }
 
 .international{
-  letter-spacing: 3px;
   background:#ffffff;
   text-align:center;
   margin-left: -10;
@@ -57,7 +53,6 @@
 }
 
 .student{
-  letter-spacing: 3px;
   background: rgb(255, 246, 235);
   text-align:center;
   margin:-10;
@@ -73,7 +68,7 @@
   margin: auto;
 }
 .table-head{
-  background: #b5fbff;
+  background: #c9ffd8;
   border-collapse:collapse;
   border: 1px solid;
 }
@@ -82,7 +77,7 @@
   border: 1px solid;
 }
 .table-grade{
-  background: #ffd0b5;
+  background: #c9ffd8;
   border-collapse:collapse;
   border: 1px solid;
 }
@@ -93,7 +88,6 @@
 }
 
 .club{
-  letter-spacing: 3px;
   background: #ffffff;
   text-align:center;
   margin-left: -10;
@@ -105,7 +99,6 @@
 }
 
 .event{
-  letter-spacing: 3px;
   background:rgb(255, 246, 235);;
   text-align:center;
   margin-left: -10;
@@ -117,15 +110,4 @@
   font-size: 90%;
   padding-bottom: 40;
   padding-top: 30;
-}
-
-.effect-fade {
-　opacity : 0;
-　transform : translate(0, 45px);
-　transition : all 300ms;
-}
-
-.effect-fade.effect-scroll {
-　opacity : 1;
-　transform : translate(0, 0);
 }
