--- a/css/style-ja.css
+++ b/css/style-ja.css
@@ -1,8 +1,9 @@
 html,
 body{
+    letter-spacing: 3px;
     color: gray;
     font-family: "游ゴシック";
 }
 main{
-    margin: 0 0 0 210px ;
+    margin: 0 0 0 200px ;
 }
