--- a/css/content-ja.css
+++ b/css/content-ja.css
@@ -2,7 +2,7 @@
     background-color: rgb(255, 255, 226);
 }
 .page-main__content{
-    width: 98%;
+    width: 90%;
     margin: auto;
 }
 .page-main__header {
@@ -31,14 +31,9 @@
   }
   
   .intro-section__block > * {
-    width: 50%;
+    width: 45%;
   }
 
-/* 偶数番目の場合、横並びを反転 */
-
-.intro-section__block:nth-child(even) {
-    flex-direction: row-reverse;
-}
 
 /* 各画像を設定 */
 
@@ -68,6 +63,7 @@
 /* 画像エリア */
 
 .intro-section__img-area {
+    margin: 30px 0;
     background: center center no-repeat;
     background-size: cover;
 }
@@ -76,14 +72,15 @@
 
 .intro-section__txt-area {
     box-sizing: border-box;
-    color: #000;
-    padding: 20px;
+    padding: 40px;
 }
 
 .intro-section__contact {
     padding: 100px 0;
 }
-
+.gairyaku{
+    text-align: center;
+}
 .zu {
-    width: 100%;
+    width: 80%;
 }
