--- a/css/content-ja.css
+++ b/css/content-ja.css
@@ -1,5 +1,8 @@
-.inner{
-    background-color: rgb(255, 255, 226);
+.main-inner{
+    background-image: url("../img/inner11.png");
+    background-size: 102%;
+    background-position: center;
+    background-attachment: fixed;
 }
 .page-main__content{
     width: 90%;
