--- a/css/index-ja.css
+++ b/css/index-ja.css
@@ -33,6 +33,7 @@
     background-image: url("../img/inner11.png");
     background-size: 102%;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .page-main__content {
