--- a/css/header-en.css
+++ b/css/header-en.css
@@ -51,10 +51,10 @@
 
 .menu {
     /*ボタンの幅*/
-    margin: 30px 0px;
+    margin: 20px 0px;
+    padding: 10px 0px;
     border-radius: 8px;
     font-size: 16px;
-    line-height: 37px;
     text-decoration: underline;
 }
 .menu a{
