--- a/css/header.css
+++ b/css/header.css
@@ -55,7 +55,7 @@
     margin: 30px 0px;
     border-radius: 8px;
     font-size: 16px;
-    line-height: 37px;
+    padding: 10px 0px;
     text-decoration: underline;
     text-align-last: justify;
 }
