リンクに色、下線

--- a/css/content-ja.css
+++ b/css/content-ja.css
@@ -92,10 +92,10 @@
 }
 
 /*リンクについて*/
-a.link{
+a.content_link{
     color: blue;
     text-decoration:underline;
 }
-a.link:hover {
+a.content_link:hover {
     color:red;
 }
