--- a/css/entranceExamination-ja.css
+++ b/css/entranceExamination-ja.css
@@ -1,3 +1,11 @@
+.main-inner {
+    height: 100%;
+    background-image: url("../img/inner11.png");
+    background-size: 102%;
+    background-position: center;
+    background-attachment: fixed;
+}
+
 .page-main__header {
     padding-top: 25;
     padding-bottom: 25;
@@ -16,4 +24,16 @@
     margin-right: 25;
     font-weight: bold;
     border: solid 2px #ffffff;
+}
+.main-table{
+    width: 900px;
+    height: 400px;
+    margin: 30px auto;
+    background-color: hsla(0, 0%, 100%, 0.8);
+    border-radius: 10px;
+}
+.main-table table{
+    width: 800px;
+    height: 400px;
+    margin: 10px auto;
 }
