英語フランス語ページ

--- a/css/inquiry.css
+++ b/css/inquiry.css
@@ -1,3 +1,10 @@
+.main-inner{
+  background-image: url("../img/inner11.png");
+  background-size: 102%;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 .page-main__header{
   padding-top: 25;
   padding-bottom: 25;
