コメントデザイン完成

--- a/css/inquiry.css
+++ b/css/inquiry.css
@@ -1,4 +1,5 @@
 .main-inner{
+  height: 100%;
   background-image: url("../img/inner11.png");
   background-size: 102%;
   background-position: center;
